@@ -1,6 +1,6 @@
 2009-04-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
-	Apply a second patch from Laszlo Pere for NB#106208.
+	Apply a second patch from Laszlo Pere for NB#106208:
 
 	* matchbox/client-types/mb-wm-client-app.c (mb_wm_client_app_init):
 	Set transiency properly if the parent is mapped after the child (in
@@ -9,6 +9,14 @@
 	matchbox/client-types/mb-wm-client-dialog.h,
 	matchbox/core/mb-wm-object.h: Add macros for checking type of the
 	parent class.
+
+	Apply another patch from Laszlo for NB#110527:
+
+	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_init): Call
+	XSelectInput here instead of in mb_wm_client_base_realize, so it's
+	done earlier.
+	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
+	Removed call for XSelectInput.
 
 2009-04-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
